# v3.8:
  * Support more platforms, currently supports: arm64, armv7, armhf, riscv64, i386, loong64, s390x, ppc64le and x86_64.
  * Add `-W` option: `--work-dir`.
  * Add `-A` option: `--unmask-dirs`.
  * Add `-E` option: `--user`.
  * Add `-t` option: `--hostname`.
  * Add `-F` option: `--ruri-fetch`.
  * Add `-x` option: `--disable-network`.
  * Rewrite cgroup support, add cpupercent limit support.
  * Change MAX_MOUNTPOINTS AND MAX_ENVS from 128*2 to 512*2.
  * Auto kill all processes in container when umounting container.
  * We will always mount / as the first mountpoint.
  * Set the size limit of /dev/shm when memory limit is set.
  * Fix crash on capget().
  * Fix pivot_root does not work.
  * Fix unshare container when pivot_root failed.
  * Enable unshare if detected ns_pid is ruri.
  * Correct ns_pid for unshare container when exec command in container again.
  * Fix qemu path when we pre-mount the rootfs from other source.
  * Add autotest.
  * Fix memory issues.
  * libk2v: Add lenth check for array to avoid overflow.
  * libk2v: rewrite deserialization part.
  * cprintf: Correct the way to get buffer size, avoid overflow.
  * General bug fixes.
# v3.7:
  * Ruri can now recognize [COMMAND [ARGS]...] without absolute path.
  * Add `-f` option: fork() before exec the command in container.
  * Add `-P` option: show process info.
  * Add `-j` option: just chroot, do not create /dev, /proc and /sys.
  * Fix unshare container joining ns.
  * Use pivot_root(2) instead of chroot(2) in unshare and rootless container.
  * Update masked dirs/files.
  * Update easter egg: `ruri AwA`.
  * Add debian packege info.
  * General bug fixes.
# v3.6:
  * Add `uidmap` suid binary support, to fix setgroup() failed in rootless container.
  * ruri can now recognize CONTAINER_DIR path start without `.` or `/`.
  * `-q` option can now use qemu path on host.
  * Support architecture aliases for `-a` option (e.g. arm64=>aarch64).
  * General bug fixes.
# v3.5: