@@ -21,7 +21,10 @@ ruri [参数]... [容器目录]... [命令 [参数]...]
 在运行完容器后，可以使用`-U`选项来卸载容器。  
 该选项需要以root身份（使用 sudo）运行。  
 警告：在删除容器之前，请运行`sudo ruri -U /path/to/container`。  
-
+```
+-C, --correct-config..............: 修正配置文件
+```
+尝试修正不全的配置文件。      
 ## 参数：
 常规的ruri容器应使用sudo运行，但如果您想运行rootless容器，也可以使用`-r`选项。  
 *****************************************
